--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         margin: 0;
       }
       canvas {
-        width: 100%;
-        height: 100%;
+        align-self: center;
+        width: 600px;
+        height: 600px;
       }
     </style>
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="./src/sample.ts"></script>
   </head>
   <body>
     <canvas></canvas>
