--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello WebGPU</title>
+    <link rel="shortcut icon" href="./assets/L.png" />
     <style>
       html,
       body {
         margin: 0;
         width: 100%;
         height: 100%;
-        background: #000;
+        background: #181818;
         color: #fff;
         display: flex;
         text-align: center;
