ray tracing triangle

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         height: 100%;
       }
     </style>
-    <script type="module" src="./src/sample.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </head>
   <body>
     <canvas></canvas>
