--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello WebGPU</title>
     <link rel="shortcut icon" href="./assets/L.png" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <style>
       html,
       body {
