AABB slope test

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   </head>
   <body>
     <canvas></canvas>
-    <span style="position: absolute; top: 20px; left: 50%"></span>
+    <!-- make the span in the center of the screen -->
+    <span
+      style="
+        position: absolute;
+        top: 20px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+      "
+    ></span>
   </body>
 </html>
