--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       }
       canvas {
         align-self: center;
-        width: 100%;
-        height: 100%;
+        width: 1200px;
+        height: 1200px;
       }
     </style>
     <script type="module" src="./src/main.ts"></script>
