--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       }
       canvas {
         align-self: center;
-        width: 1200px;
-        height: 1200px;
+        width: 75%;
+        height: 75%;
       }
     </style>
     <script type="module" src="./src/main.ts"></script>
