--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       }
       canvas {
         align-self: center;
-        width: 75%;
-        height: 75%;
+        width: 960px;
+        height: 960px;
       }
     </style>
     <script type="module" src="./src/main.ts"></script>
