fix canvas size

--- a/index.html
+++ b/index.html
@@ -23,16 +23,11 @@
         font-size: 14px;
         margin: 0;
       }
-      canvas {
-        align-self: center;
-        width: 960px;
-        height: 960px;
-      }
     </style>
     <script type="module" src="./src/main.ts"></script>
   </head>
   <body>
-    <canvas></canvas>
+    <!-- <canvas></canvas> -->
     <span
       style="
         position: absolute;
