--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       style="position: absolute; top: 0%; align-self: center"
       onclick="download('webgpuCanvas')"
     >
-      download
+      capture
     </button>
     <script>
       function download(selector) {
